Link fix plus content license update

--- a/sites/licence.mdx
+++ b/sites/licence.mdx
@@ -10,15 +10,15 @@ import { LeadText } from '../src/components/LeadText.js';
 
 ## Writing & Graphics
 
-All writing, graphics and other content on the site is my original content (unless stated otherwise), and I license it under Creative Commons Attribution-NonCommercial 4.0 International [CC BY-NC 4.0](http://creativecommons.org/licenses/by-nc/4.0/). If you are looking at the repository, almost everything in the [docs](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs) and [pages](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/src/pages) is CC BY-NC 4.0 and available for re-use with attribution:
+All writing, graphics and other content on the site is my original content (unless stated otherwise), and I license it under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International [CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc/4.0/). If you are looking at the repository, almost everything in the [docs](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs) and [pages](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/src/pages) is [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) and available for re-use with attribution:
 
 
-> "Title" ― [Mateusz Dąbrowski](https://mateuszdabrowski.pl/") ― [CC BY-NC 4.0](ttp://creativecommons.org/licenses/by-nc/4.0/)
+> "Title" ― [Mateusz Dąbrowski](https://mateuszdabrowski.pl/) ― [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/)
 
 ```html title="Attribution Snippet"
 "Title" &mdash;
 <a href="https://mateuszdabrowski.pl/">Mateusz Dąbrowski</a> &mdash;
-<a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
 ```
 
 ## Code & Design
