Added mobile table of contents and improved content readability on wide screens

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -5,9 +5,16 @@ sidebar_label: Features On Demand
 description: Discover the Salesforce Marketing Cloud Features On Demand and unlock platform potential.
 ---
 
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Discover the Salesforce Marketing Cloud's Features On Demand and unlock platform potential." />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 ## What are Marketing Cloud's Features On Demand?
 
