--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -5,9 +5,16 @@ slug: /
 description: SSJS + JS + SQL + SFMC Config documentation and code snippets that I find useful for developing Marketing Automation
 ---
 
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../src/components/LeadText.js';
 
 <LeadText content="SSJS + JS + SQL + SFMC Config documentation and code snippets that I find useful for developing Marketing Automation." />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 ## Server-Side JavaScript
 
