--- a/docs/js/js-if-and-switch.mdx
+++ b/docs/js/js-if-and-switch.mdx
@@ -5,11 +5,16 @@ sidebar_label: If & Switch
 description: Deep dive into the two pillars of JavaScript flow control
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Deep dive into the two pillars of JavaScript flow control' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 ## If Statements
 
@@ -107,7 +112,7 @@ const isOptedIn = !!optInDate;
 
 :::
 
-### If shorthand
+### If Shorthand
 
 For simple, one-line `if` statements, there is also a one-line shorthand:
 
