--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -5,11 +5,16 @@ sidebar_label: Loops
 description: JavaScript offers four for loops and two while loops. What's the difference?
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="JavaScript offers four for loops and two while loops. What's the difference?" />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 ## For Loops
 
