--- a/docs/sql/sfmc-sql-conversion-functions.mdx
+++ b/docs/sql/sfmc-sql-conversion-functions.mdx
@@ -5,9 +5,16 @@ sidebar_label: Conversion Functions
 description: Break from the limits of Data Extension data types. Use full power of SQL to control your values.
 ---
 
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Break from the limits of source data types. Use the full power of SQL to transform your values.' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 Salesforce Marketing Cloud SQL implementation does not support user-defined functions. There are, however, multiple built-in functions that are useful on a day-to-day basis when working with queries.
 
