--- a/docs/sql/sfmc-sql-join.mdx
+++ b/docs/sql/sfmc-sql-join.mdx
@@ -5,9 +5,16 @@ sidebar_label: Join
 description: Data Extensions. System Data Views. With the JOIN statement, use one query to rule them all.
 ---
 
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Data Extensions. System Data Views. With the JOIN statement, use one query to rule them all.' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 There will be some cases where all you need is to pull (and maybe transform) data [`FROM`](./sfmc-sql-from.mdx) a single Data Extension. But the real magic of SQL is visible when you need to combine information from multiple data points. Here comes the `JOIN` statement.
 
