--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -7,9 +7,16 @@ description: Get a LIKE and build more flexible SQL queries
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Get a LIKE and build more flexible SQL queries' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 `LIKE` operator allows you to leverage wildcards and groups to search for matching records based on value fragment. You may use it in the [`SELECT CASE`](./sfmc-sql-select.mdx#like-in-case) and [`WHERE`](./sfmc-sql-where.mdx) statements.
 
