--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -5,9 +5,16 @@ sidebar_label: Select
 description: Selected information on the SELECT statement in SFMC SQL
 ---
 
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Selected information on the SELECT statement in SFMC SQL' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 The `SELECT` statement opens each query. It both defines the columns of data extensions and system data views that will be needed, as well as allows you to create entirely new data points.
 
