--- a/docs/ssjs/debugging-ssjs.mdx
+++ b/docs/ssjs/debugging-ssjs.mdx
@@ -7,9 +7,16 @@ description: To catch, or not to catch, that is debugging
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='To catch, or not to catch, that is debugging.' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 When you start working with programmatic languages in Salesforce Marketing Cloud, you will quickly become close friends with the Error 500 page. And if you beat it and go forward with the code and official documentation, you will fall in love with unexpected errors in functions and API responses. How to survive those?
 
