--- a/docs/ssjs/ssjs-loops.mdx
+++ b/docs/ssjs/ssjs-loops.mdx
@@ -5,11 +5,16 @@ sidebar_label: Loops
 description: Let's dive into limited looping options of the SSJS
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Let's dive into limited looping options of the SSJS." />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 Working with arrays and objects is one of the selling points of SSJS vs AMPScript. And the primary way to utilize those structures is to loop over them. While SSJS doesn't have all the magic of the modern JavaScript, it still has much more to offer than single `FOR` available in AMPScript.
 
