--- a/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
+++ b/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
@@ -5,9 +5,16 @@ sidebar_label: MobileConnect Phone Change
 description: Control your MobileConnect data with hidden _MobileAddress features.
 ---
 
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Control your MobileConnect data with hidden _MobileAddress features.' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 ## Problem with changing MobileConnect Mobile Number
 
