--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -7,9 +7,16 @@ description: Win-back your e-commerce customers with SFMC Behavioral Triggers.
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Win-back your e-commerce customers with SFMC Behavioral Triggers." />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 ## Marketing Cloud Behavioral Triggers
 
