--- a/docs/sql/sfmc-sql-numeric-functions.mdx
+++ b/docs/sql/sfmc-sql-numeric-functions.mdx
@@ -6,9 +6,16 @@ description: Take control over numbers with built-in SQL functions. Let the quer
 draft: true
 ---
 
+import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Take control over numbers with built-in SQL functions. Let the query do the job.' />
+
+:::tip Table of Contents
+
+<TOCInline toc={toc} />
+
+:::
 
 Salesforce Marketing Cloud SQL implementation does not support user-defined functions. There are, however, multiple built-in functions that are useful on a day-to-day basis when working with queries.
 
